--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,5 @@
 version = "2.5.0"
-maxColumn = 165
 align = more
+maxColumn = 165
 newlines.alwaysBeforeElseAfterCurlyIf = true
+rewrite.rules = [SortModifiers]
