--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,7 @@
-version = "2.7.5"
-align = more
-maxColumn = 165
+version = "3.4.3"
+runner.dialect = scala213
+align.preset = more
+maxColumn = 220
 newlines.alwaysBeforeElseAfterCurlyIf = true
 rewrite.rules = [SortModifiers]
+spaces.beforeContextBoundColon = IfMultipleBounds
